Actually add changes to introduction, paper etc

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,4 +1,6 @@
 \section{Introduction}
+In recent years, virtual machines have become prevalent in cluster computing environments \cite{gartner2009virtual} as they lower power costs and help in conserving data center space. Hardware improvements have meant that smart phone configurations found today resemble desktop machines from few years ago and many of them run commodity operating systems. There is a growing interest in academia \cite{cox2007pocket} and industry \cite{vmware2009nextfrontier} about the virtualization on these devices. We believe that virtualization can provide better security guarantees in mobile devices and enable useful applications like environment migration.
 
-This is my intro, I am going to cite work by King \emph{et al.}
-\cite{King09}, to show you how bibtex works.
+Mobile devices today run many third party applications to perform complex tasks like web browsing, banking and gaming. Recent studies have found that smartphones are the target of an increasing number of malware attacks \cite{bose2006mobile},  \cite{cybercriminals2007banks},  \cite{iphone2010seriot} and their security is important as personal data such as contacts, credit card numbers and passwords are often stored on the device. While some security models \cite{androidsecurity} provide a stronger process level isolation among applications, operating system bugs \cite{kernel2009vulnerability} can still allow malicious applications to take over the device. We believe that virtualization can be useful for secure isolation of third party code from confidential data and provide a greater defence-in-depth against attacks on the system.
+
+Environment migration has been studied among servers \cite{clark2005live} and enables administrators of clusters to perform maintainence tasks without interruption. Migrating an OS to a mobile device can be useful as it can take advantage of network or computation facilities that are closer to the user's location and provide the user with a consistent experience irrespective of the network connectivity. 
