--- a/paper/mybib.bib
+++ b/paper/mybib.bib
@@ -1,7 +1,54 @@
-@inproceedings{King09,
-  author = "Samuel T. King",
-  title = "Something interesting",
-  booktitle = "Proceedings of the Spring 2009 CS 523 Class",
-  year = "2009",
-  month = "March"
+@article{bose2006mobile,
+  title={{On Mobile Viruses Exploiting Messaging and Bluetooth Services}},
+  author={Bose, A. and Shin, K.G.},
+  journal={Securecomm and Workshops, 2006},
+  pages={1-10},
+  year={2006}
+}
+
+@misc{cybercriminals2007banks,
+title = {Cyber-criminals target mobile banking},
+howpublished = "\url{http://www.v3.co.uk/vnunet/news/2173161/cyber-criminals-target-mobile}"
+}
+
+@misc{iphone2010seriot,
+title = {iPhone Privacy},
+howpublished = "\url{http://seriot.ch/resources/talks_papers/iPhonePrivacy.pdf}"
+}
+
+@misc{gartner2009virtual,
+title = {{16 percent of workloads are running Virtual Machines}},
+howpublished = "\url{http://www.gartner.com/it/page.jsp?id=1211813}"
+}
+
+@conference{cox2007pocket,
+title={{Pocket Hypervisors: Opportunities and Challenges}},
+author={Cox, LP and Chen, PM},
+booktitle={Eighth IEEE Workshop on Mobile Computing Systems and Applications, 2007. HotMobile 2007},
+pages={46-50},
+year={2007}
+}
+
+@misc{vmware2009nextfrontier,
+title= {{Mobile Phones, The Next Frontier}},
+howpublished = "\url{http://blogs.vmware.com/console/2009/08/mobile-phones-the-next-frontier.html}"
+}
+
+@misc{androidsecurity,
+title = {{Android Security and Permissions}},
+howpublished = {\url{http://developer.android.com/guide/topics/security/security.html}}
+}
+
+@misc{kernel2009vulnerability,
+title = {{Vulnerability Summary for CVE-2009-2692}},
+howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-2692}}
+}
+
+@conference{clark2005live,
+  title={{Live migration of virtual machines}},
+  author={Clark, C. and Fraser, K. and Hand, S. and Hansen, J.G. and Jul, E. and Limpach, C. and Pratt, I. and Warfield, A.},
+  booktitle={Proceedings of the 2nd conference on Symposium on Networked Systems Design \& Implementation-Volume 2},
+  pages={286},
+  year={2005},
+  organization={USENIX Association}
 }
