--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1,12 +1,13 @@
 \documentclass[letterpaper,twocolumn,10pt]{article}
 \usepackage[margin=.95in]{geometry}
 \usepackage{times}
+\usepackage{url}
 \usepackage{graphicx}
 
 \sloppy
 
-\title{This is my title}
-\author{Samuel T. King \\
+\title{This will be a cool title}
+\author{Will Dietz, Kevin Larson, Shivaram Venkataraman \\
 University of Illinois at Urbana Champaign}
 
 \date{}
@@ -18,8 +19,12 @@ University of Illinois at Urbana Champaign}
 
 \maketitle
 
-\input{abstract.tex}
+% No abstract for introduction
+%\input{abstract.tex}
 \input{intro.tex}
+\input{timeline.tex}
+\input{eval.tex}
+\input{results.tex}
 
 \bibliographystyle{abbrv}
 \bibliography{mybib.bib}
