--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -6,9 +6,9 @@ Mobile devices today run many third party applications to perform complex tasks 
 Environment migration has been studied earlier, in the context of servers in a cluster \cite{clark2005live} and enables administrators of clusters to perform maintainence tasks without interruption. Migrating an OS to a mobile device can be useful as it can take advantage of network or computation facilities that are closer to the user's location and provide the user with a consistent experience irrespective of the network connectivity. 
 
 \subsection{Existing Work}
-Currently, there are many solutions available for virtualization on desktop environments.  VMware is a popular closed source solution which implements a variety of virtualization techniques and is used in both industry and academia.  KVM, QEMU, and XEN are all open source solutions, implementing their own assortments of virtualization techniques.  Unfortunately, none of these solutions (without massive modification) is appropriate for a mobile environment.
+Currently, there are many solutions available for virtualization on desktop environments.  VMware is a popular closed source solution which implements a variety of virtualization techniques and is used in both industry and academia.  KVM \cite{kvm}, QEMU \cite{qemu}, and XEN \cite{xen} are all open source solutions, implementing their own assortments of virtualization techniques.  Unfortunately, none of these solutions (without massive modification) is appropriate for a mobile environment.
 
-There are various mobile solutions; however, most of these projects don't value portability very highly.  As a result, one of the main advantages of a mobile platform is lost.  The Columbia Android paper prioritizes performance and security at the cost of usability and portability. They disable the Android's runtime stack, sacrificing a large portion of the usability of the phone.  Another solution, MobiVMM, focuses on power efficiency and security.  Similarly to the Columbia Android project, the usability is sacrificed in order to further other goals.
+There are various mobile solutions; however, most of these projects don't value portability very highly.  As a result, one of the main advantages of a mobile platform is lost.  The Columbia Android paper prioritizes performance and security at the cost of usability and portability. They disable the Android's runtime stack, sacrificing a large portion of the usability of the phone.  Another solution, MobiVMM \cite{mobivmm}, focuses on power efficiency and security.  Similarly to the Columbia Android project, the usability is sacrificed in order to further other goals.
 
 %% This subsection really needs a better title!
 \subsection{Our solution}
