--- a/paper/mybib.bib
+++ b/paper/mybib.bib
@@ -52,3 +52,41 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-26
   year={2005},
   organization={USENIX Association}
 }
+
+@misc{kvm,
+	author = "{Qumranet}",
+	title = "{Kernel-Based Virtual Machine}",
+	year = {2009},
+	howpublished = {[Online]},
+	note = {Available: \url{http://linux-kvm.org}}
+}
+
+@inproceedings{qemu,
+ author = {Bellard,, Fabrice},
+ title = "{QEMU, a fast and portable dynamic translator}",
+ booktitle = "{ATEC '05: Proceedings of the annual conference on USENIX Annual Technical Conference}",
+ year = {2005},
+ pages = {41--41},
+ location = {Anaheim, CA},
+ publisher = "{USENIX Association}",
+ address = {Berkeley, CA, USA},
+ }
+
+@misc{xen,
+    author = {Paul Barham and Boris Dragovic and Keir Fraser and Steven Hand and Tim Harris and Alex Ho and Rolf Neugebauer and Ian Pratt and Andrew Warfield},
+    title = {Xen and the Art of Virtualization},
+    year = {2003}
+}
+
+@inproceedings{mobivmm,
+ author = {Yoo, Seehwan and Liu, Yunxin and Hong, Cheol-Ho and Yoo, Chuck and Zhang, Yongguang},
+ title = {MobiVMM: a virtual machine monitor for mobile phones},
+ booktitle = {MobiVirt '08: Proceedings of the First Workshop on Virtualization in Mobile Computing},
+ year = {2008},
+ isbn = {978-1-60558-328-0},
+ pages = {1--5},
+ location = {Breckenridge, Colorado},
+ doi = {http://doi.acm.org/10.1145/1622103.1622109},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
