Pull in couple of paragraphs from the Wave. Add timeline and evaluation plan

--- a/paper/eval.tex
+++ b/paper/eval.tex
@@ -1,1 +1,7 @@
 \section{Evaluation plan}
+We evaluate our system focussing on our design goals of portability, isolation and usability
+	\begin{itemize*}
+	\item Running existing unmodified x86 binaries mobile device.
+	\item Measure performance impact of x86 emulation on ARM.
+	\item Evaluate the latency of an interactive application which renders using the native X-server.
+	\end{itemize*}
