--- a/paper/mybib.bib
+++ b/paper/mybib.bib
@@ -44,6 +44,16 @@ title = {{Vulnerability Summary for CVE-2009-2692}},
 howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-2692}}
 }
 
+@misc{opencore2009android,
+title = {{Vulnerability Summary for CVE-2009-0475}},
+howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-0475}}
+}
+
+@misc{sms2009iphone,
+title = {{Vulnerability Summary for CVE-2009-2204}},
+howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-2204}}
+}
+
 @conference{clark2005live,
   title={{Live migration of virtual machines}},
   author={Clark, C. and Fraser, K. and Hand, S. and Hansen, J.G. and Jul, E. and Limpach, C. and Pratt, I. and Warfield, A.},
