--- a/paper/timeline.tex
+++ b/paper/timeline.tex
@@ -1,2 +1,17 @@
 \section{Timeline}
-
+\subsection{Feb 17 - March 17}
+	\begin{itemize*}
+	\item Explore architecture details of ARMv6 and finalize design details
+	\item Compile and run qemu on ARMv6 with Android toolchain
+	\item Compile X-server using Android toolchain 
+	\end{itemize*}
+\subsection{March 17 - April 27}
+	\begin{itemize*}
+	\item Integrate X-server with Android Window Manager
+	\item Implement ApplicationManger to spawn the virtual machines and X-server 
+	\item Investigate performance improvements to make emulation faster
+	\end{itemize*}
+\subsection{April 27 - May 11}
+	\begin{itemize*}
+	\item Document appropriately and write up the final report 
+	\end{itemize*}
