added to existing work section, describe vmware's MVP. citation added, fix formatting on another citation

--- a/paper/mybib.bib
+++ b/paper/mybib.bib
@@ -90,8 +90,8 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
 
 @inproceedings{mobivmm,
  author = {Yoo, Seehwan and Liu, Yunxin and Hong, Cheol-Ho and Yoo, Chuck and Zhang, Yongguang},
- title = {MobiVMM: a virtual machine monitor for mobile phones},
- booktitle = {MobiVirt '08: Proceedings of the First Workshop on Virtualization in Mobile Computing},
+ title = "{MobiVMM: a virtual machine monitor for mobile phones}",
+ booktitle = "{MobiVirt '08: Proceedings of the First Workshop on Virtualization in Mobile Computing}",
  year = {2008},
  isbn = {978-1-60558-328-0},
  pages = {1--5},
@@ -99,4 +99,10 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
  doi = {http://doi.acm.org/10.1145/1622103.1622109},
  publisher = {ACM},
  address = {New York, NY, USA},
+ }
+
+@misc{mvp,
+ author = {VMware},
+ title = "{VMware MVP (Mobile Virtualization Platform)}",
+ howpublished = {\url{http://www.vmware.com/products/mobile}},
  }
