added columbia citation

--- a/paper/mybib.bib
+++ b/paper/mybib.bib
@@ -106,3 +106,10 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
  title = "{VMware MVP (Mobile Virtualization Platform)}",
  howpublished = {\url{http://www.vmware.com/products/mobile}},
  }
+
+@misc{columbia,
+ author = {Andreas Nilsson, Christoffer Dall, David Albert},
+ title = "{Android Virtualization}",
+ year = {2009},
+ organization = {Columbia University},
+} 
