--- a/paper/timeline.tex
+++ b/paper/timeline.tex
@@ -2,8 +2,8 @@
 \subsection{Feb 17 - March 17}
 	\begin{itemize*}
 	\item Explore architecture details of ARMv6 and finalize design details
-	\item Compile and run qemu on ARMv6 with Android toolchain
-	\item Compile X-server using Android toolchain 
+	\item Compile and run qemu on ARMv6 on Android 
+	\item Compile and run X-server on Android
 	\end{itemize*}
 \subsection{March 17 - April 27}
 	\begin{itemize*}
