Some incremental changes

--- a/paper/eval.tex
+++ b/paper/eval.tex
@@ -4,4 +4,5 @@ We evaluate our system focussing on our design goals of portability, isolation a
 	\item Running existing unmodified x86 binaries mobile device.
 	\item Measure performance impact of x86 emulation on ARM.
 	\item Evaluate the latency of an interactive application which renders using the native X-server.
+  \item Profile the memory and power overhead due to virtualization.
 	\end{itemize*}
