--- a/paper/timeline.tex
+++ b/paper/timeline.tex
@@ -1,14 +1,14 @@
 \section{Timeline}
 \subsection{Feb 17 - March 17}
 	\begin{itemize*}
-	\item Explore architecture details of ARMv6 and finalize design details
-	\item Compile and run qemu on ARMv6 with Android toolchain
-	\item Compile X-server using Android toolchain 
+	\item Explore architecture details of ARM and finalize design details for the hypervisor.
+	\item Build a thin x86 hypervisor on ARM using the mobile device toolchain.
+	\item Compile and run X-server on the mobile device.
 	\end{itemize*}
 \subsection{March 17 - April 27}
 	\begin{itemize*}
-	\item Integrate X-server with Android Window Manager
-	\item Implement ApplicationManger to spawn the virtual machines and X-server 
+	\item Integrate X-server with Window Manager of the mobile device.
+	\item Implement VMManger to spawn the virtual machines and X-server 
 	\item Investigate performance improvements to make emulation faster
 	\end{itemize*}
 \subsection{April 27 - May 11}
