--- a/paper/timeline.tex
+++ b/paper/timeline.tex
@@ -3,12 +3,12 @@
 	\begin{itemize*}
 	\item Explore architecture details of ARM and finalize design details for the hypervisor.
 	\item Build a thin x86 hypervisor on ARM using the mobile device toolchain.
-	\item Compile and run X-server on the mobile device.
+	\item Compile and run x11 on the mobile device.
 	\end{itemize*}
 \subsection{March 17 - April 27}
 	\begin{itemize*}
-	\item Integrate X-server with Window Manager of the mobile device.
-	\item Implement VMManger to spawn the virtual machines and X-server 
+	\item Integrate x11 with Window Manager of the mobile device.
+	\item Implement VMManger to spawn the virtual machines and x11 
 	\item Investigate performance improvements to make emulation faster
 	\end{itemize*}
 \subsection{April 27 - May 11}
