Add a title, Fix a bib entry and put in placeholder results

--- a/paper/mybib.bib
+++ b/paper/mybib.bib
@@ -12,7 +12,7 @@ howpublished = "\url{http://www.v3.co.uk/vnunet/news/2173161/cyber-criminals-tar
 }
 
 @misc{iphone2010seriot,
-title = {iPhone Privacy},
+title = {{iPhone Privacy}},
 howpublished = "\url{http://seriot.ch/resources/talks_papers/iPhonePrivacy.pdf}"
 }
 
