--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -7,7 +7,7 @@
 
 \sloppy
 
-\title{This will be a cool title}
+\title{More Mobile than Mobile}
 \author{Will Dietz, Kevin Larson, Shivaram Venkataraman \\
 University of Illinois at Urbana Champaign}
 
