--- a/paper/results.tex
+++ b/paper/results.tex
@@ -1,1 +1,5 @@
 \section{Anticipated results}
+	\begin{itemize*}
+	\item Working implementation of x86 Hypervisor on ARM
+	\item VMManager integrated with the mobile device window manager 
+	\end{itemize*}
