Added migration and UI items to timeline.

--- a/paper/timeline.tex
+++ b/paper/timeline.tex
@@ -8,10 +8,12 @@
 \subsection{March 17 - April 27}
 	\begin{itemize*}
 	\item Integrate x11 with Window Manager of the mobile device.
-	\item Implement VMManger to spawn the virtual machines and x11 
-	\item Investigate performance improvements to make emulation faster
+	\item Implement VMManger to spawn the virtual machines and x11.
+        \item Implement migration UI on desktop and mobile device.
+        \item Migrate existing x86 applications between desktop and mobile device.
+	\item Investigate performance improvements to make emulation faster.
 	\end{itemize*}
 \subsection{April 27 - May 11}
 	\begin{itemize*}
-	\item Document appropriately and write up the final report 
+	\item Document appropriately and write up the final report.
 	\end{itemize*}
