--- a/paper/eval.tex
+++ b/paper/eval.tex
@@ -1,5 +1,5 @@
 \section{Evaluation plan}
-We evaluate our system focussing on our design goals of portability, isolation and usability
+We evaluate our system focusing on our design goals of portability, isolation and usability
 	\begin{itemize*}
 	\item Running existing unmodified x86 binaries mobile device.
 	\item Measure performance impact of x86 emulation on ARM.
