--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -8,7 +8,8 @@
 \sloppy
 
 \title{More Mobile than Mobile}
-\author{Will Dietz, Kevin Larson, Shivaram Venkataraman \\
+\author{Will Dietz, Kevin Larson, Shivaram Venkataraman\\
+wdtz2, klarson5, venkata4@illinois.edu\\
 University of Illinois at Urbana Champaign}
 
 \date{}
