fix my netid :)

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -9,7 +9,7 @@
 
 \title{More Mobile than Mobile}
 \author{Will Dietz, Kevin Larson, Shivaram Venkataraman\\
-wdtz2, klarson5, venkata4@illinois.edu\\
+\{wdietz2, klarson5, venkata4\}@illinois.edu\\
 University of Illinois at Urbana Champaign}
 
 \date{}
