--- a/paper/mybib.bib
+++ b/paper/mybib.bib
@@ -112,4 +112,11 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
  title = "{Android Virtualization}",
  year = {2009},
  organization = {Columbia University},
+ howpublished = {\url{http://www.chazy.dk/android-report.pdf}},
 } 
+
+@misc{okl4,
+ author = {Open Kernel Labs},
+ title = "{OKL4 Microvisor}",
+ howpublished = {\url{http://www.ok-labs.com/products/okl4-microvisor}},
+}
