added trustzone to existing work, citation

--- a/paper/mybib.bib
+++ b/paper/mybib.bib
@@ -120,3 +120,9 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
  title = "{OKL4 Microvisor}",
  howpublished = {\url{http://www.ok-labs.com/products/okl4-microvisor}},
 }
+
+@misc{trustzone,
+ author = {ARM Ltd.},
+ title = "{ARM - TrustZone}",
+ howpublished = {\url{http://www.arm.com/products/processors/technologies/trustzone.php}},
+}
