--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -5,14 +5,14 @@ In recent years, virtual machines have become prevalent in cluster computing env
 
 Environment migration has been studied earlier, in the context of servers in a cluster \cite{clark2005live} and enables administrators of clusters to perform maintenance tasks without interruption. On the other hand, migrating a system to a mobile device can take advantage of network or computation facilities that are closer to the user's location and provide the user with a consistent experience irrespective of the network connectivity. Migration techniques also help maintain consistent snapshots which allow easy transfer of data when users switch mobile phones and to roll-back the system to a previously known state.
 
-{\bf NOTE: Need to mention OK-L4 and  ARM Trust-zone \newline}
 \subsection{Existing Work}
 Currently, there are many solutions available for virtualization on desktop environments.  VMware is a popular closed source solution which implements a variety of virtualization techniques and is used in both industry and academia.  KVM \cite{kvm}, QEMU \cite{qemu}, and XEN \cite{xen} are all open source solutions, implementing their own assortments of virtualization techniques.  These solutions for the most part do not work well in a mobile environment for performance, security, and usability reasons. \\
 
 Recently there has been a surge of research done for mobile virtualization.  One such solution is MobiVMM \cite{mobivmm}, which prioritizes performance and security at the cost of usability and portability.  Work has been done to port KVM to Android \cite{columbia}, focusing on performance and functionality.  All of these solutions either dual-boot the OS or require disabling the phone's existing runtime stack to use them. \\
 
 VMware's MVP project \cite{mvp} is most similar to ours.  They introduce a very thin Type I hypervisor with an emphasis on usability, performance, and security--without sacrificing the phone's functionality.   However their implementation does not integrate with the host OS, but rather replaces and contains it.  This is useful, but tangential to our work.  Open Kernel Lab's OKL4 \cite{okl4} is another implementation implementing a thin Type I hypervisor and is very similar to MVP.  As described in Section \ref{sec:proposedarch}, we aim to provide a Type II VM and prioritize live migration capabilities as well as usability.  Furthermore, we are mostly concerned about containing applications for isolation, security, usability, and portability.  Instead of virtualization the existing OS to protect others from it, we assume it is trusted and only have to isolate new applications.  This provides for a very different architecture in our implementation. \\
-%We use an idea similar to their JeOS to provide a minimal guest OS when virtualizing appliances.
+
+There also is ARM's TrustZone \cite{trustzone} which is aimed at creating a secure ``TrustZone'', primarily for use in DRM, bank transactions and other similar setups.  The goal is to protect a specialized app from the rest of the system (and protect, for example, secrets and keys from leaking out of this zone).  We aim to to do the opposite: we trust the host OS and are protecting it from the guest applications.
 
 \begin{figure}[tbh]
 \centering
