Add OP reference

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -24,9 +24,13 @@ University of Illinois at Urbana Champaign}
 % No abstract for introduction
 %\input{abstract.tex}
 \input{intro.tex}
+\label{sec:intro}
 \input{timeline.tex}
+\label{sec:timeline}
 \input{eval.tex}
+\label{sec:eval}
 \input{results.tex}
+\label{sec:results}
 
 \bibliographystyle{abbrv}
 \bibliography{mybib.bib}
