--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -5,11 +5,10 @@ In recent years, virtual machines have become prevalent in cluster computing env
 
 Environment migration has been studied earlier, in the context of servers in a cluster \cite{clark2005live} and enables administrators of clusters to perform maintenance tasks without interruption. On the other hand, migrating a system to a mobile device can take advantage of network or computation facilities that are closer to the user's location and provide the user with a consistent experience irrespective of the network connectivity. Migration techniques also help maintain consistent snapshots which allow easy transfer of data when users switch mobile phones and to roll-back the system to a previously known state.
 
-{\bf NOTE: Need to mention OK-L4 and  ARM Trust-zone \newline}
 \subsection{Existing Work}
 Currently, there are many solutions available for virtualization on desktop environments.  VMware is a popular closed source solution which implements a variety of virtualization techniques and is used in both industry and academia.  KVM \cite{kvm}, QEMU \cite{qemu}, and XEN \cite{xen} are all open source solutions, implementing their own assortments of virtualization techniques.  These solutions for the most part do not work well in a mobile environment for performance, security, and usability reasons. \\
 
-Recently there has been a surge of research done for mobile virtualization.  One such solution is MobiVMM \cite{mobivmm}, which prioritizes performance and security at the cost of usability and portability.  Work has been done to port KVM to Android \cite{columbia}, focusing on performance and functionality.  All of these solutions either dual-boot the OS or require disabling the phone's existing runtime stack to use them. \\
+Recently there has been a surge of research in the area of mobile virtualization.  One such solution is MobiVMM \cite{mobivmm}, which prioritizes performance and security at the cost of usability and portability.  Work has been done to port KVM to Android \cite{columbia}, focusing on performance and functionality.  All of these solutions either dual-boot the OS or require disabling the phone's existing runtime stack to use them. \\
 
 VMware's MVP project \cite{mvp} is most similar to ours.  They introduce a very thin hypervisor with an emphasis on usability, performance, and security--without sacrificing the phone's functionality.   However their implementation does not integrate with the host OS, but rather replaces and contains it.  This is useful, but tangential to our work.  As described in Section \ref{sec:proposedarch}, we aim to provide a Type II VM and prioritize live migration capabilities as well as usability.  Furthermore, we are mostly concerned about containing applications for isolation, security, usability, and portability.  Instead of virtualization the existing OS to protect others from it, we assume it is trusted and only have to isolate new applications.  This provides for a very different architecture in our implementation. \\
 %We use an idea similar to their JeOS to provide a minimal guest OS when virtualizing appliances.
@@ -22,16 +21,18 @@ VMware's MVP project \cite{mvp} is most similar to ours.  They introduce a very 
 \end{figure}
 
 {\bf NOTE: Add some discussion about power usage, memory constraints ? \newline}
-{\bf NOTE: Should we mention OP (like Prof King mentioned, citing papers of people reviewing it never hurt ;)) but also because are architecture, accidentally, does share a lot with the OP design...?}
+{\bf NOTE: Explicitly state the security model \newline}
 
 \subsection{Proposed Architecture}
 \label{sec:proposedarch}
 %Here describe what we propose to do, perhaps?
 %Our timeline/evaluation are kinda worthless without it.
-Our proposed architecture has two main components: the virtualization framework, and the integration front-end.  The virtualzation framework contains the hypervisor (QEMU or KVM based) as well as each of the spawned VM's (see Figure \ref{fig:arch}.  Each VM will contain a thin OS (as thin as possible) with the primary goal of each VM running an application.  The VM's will be running x86-based Operating Systems as a design decision to enable a more diverse set of target applications to be run (note that most mobile devices that we are targeting are ARMv6 or ARMv7).  Each of the VM's will headless themselves, but will run their applications via X, connecting to the X server. \\
+Our proposed architecture has two main components: the virtualization framework, and the integration front-end.  The virtualzation framework contains the hypervisor (QEMU or KVM based) as well as each of the spawned VM's (see Figure \ref{fig:arch}.  Each VM will contain a thin OS with the primary goal of each VM running an application.  We chose to run x86-based Operating Systems in the VM to enable a more diverse set of target applications to be run. Each of the VM's will headless themselves, but will run their applications via X, connecting to the native X server. \\
 
-The other component is the integration front-end.  This contains a light X server that has been integrated into the host OS, and also contains the VM manager.  The VM manager will either run inside the X-server as a native application (ARM-based), or as a separate application within the host OS.  The VM manager will be the user interface that controls launching, suspending, resuming, migrating the VM's as well as ensuring the X-server is running properly. Note that most of this actual logic and functionality will be in the hypervisor in the virtualization framework.\\
+The other component is the integration front-end.  This contains a light X server that has been integrated into the host OS, and also contains the VM manager.  The VM manager will either run inside the X-server as a native application (ARM-based), or as a separate application within the host OS.  The VM manager will be the user interface that controls launching, suspending, resuming, migrating the VM's as well as ensuring the X-server is running properly. Note that most of this actual logic and functionality will be implemented by the hypervisor in the virtualization framework.\\
 
-Note that this shared X-server allows us to make the graphical part of the applications common, which we believe is an improvement over having each of the VM's run an X-server, and then have another layer compositing or managing those into what the user sees.  Additionally the X-server will be running native code, which we hope will allow for it to be less cpu-intensive than it might otherwise. \\
+The shared X-server allows us to make the graphical part of the applications common, which we believe is an improvement over having each of the VM's run an X-server, and having another layer compositing those into what the user sees. Additionally the X-server will be running native code, which we hope will allow for it to be less cpu-intensive than it might otherwise. \\
 
-Additionally we aim to have the slowest part (the virtualization framework) be as device independent as possible, which is important because we anticipate this being the most difficult to make effective.  The integration front-end will have to be ported for each new device we support, but we hope to make that as simple as possible.  As an example, we should be able to take advantage of existing desktop X servers and support desktops as a client for our system, but we leave that as future work.  Our first implementation will focus on one particular device and OS, but even there we will be able to support live migration of applications. \\
+Additionally we aim to have the virtualization framework be device independent, which is important because we anticipate this to be the more complex component.  The integration front-end will have to be ported for each new device we support, but we hope to make that as simple as possible.  As an example, we should be able to take advantage of existing desktop X servers and support desktops as a client for our system, but we leave that as future work.  Our first implementation will focus on one particular device and OS, but even there we will be able to support live migration of applications. \\
+
+The major goals of this project is to build a secure, usable and portable framework for mobile device virtualization. We believe our security model to be an effective method of isolatng applications and find that our design ideas are similar to other recent efforts ~\cite{grier2008secure} in isolating untrusted code.
