--- a/paper/mybib.bib
+++ b/paper/mybib.bib
@@ -113,3 +113,10 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
  year = {2009},
  organization = {Columbia University},
 } 
+
+@conference{grier2008secure,
+  title={{Secure web browsing with the OP web browser}},
+  author={Grier, C. and Tang, S. and King, S.T.},
+  booktitle={Proceedings of the 2008 IEEE Symposium on Securiy and Privacy},
+  year={2008}
+}
