Fix a sentence in the intro

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -36,4 +36,4 @@ The shared X-server allows us to make the graphical part of the applications com
 
 Additionally we aim to have the virtualization framework be device independent, which is important because we anticipate this to be the more complex component.  The integration front-end will have to be ported for each new device we support, but we hope to make that as simple as possible.  As an example, we should be able to take advantage of existing desktop X servers and support desktops as a client for our system, but we leave that as future work.  Our first implementation will focus on one particular device and OS, but even there we will be able to support live migration of applications. \\
 
-The major goals of this project is to build a secure, usable and portable framework for mobile device virtualization. We believe our security model to be an effective method of isolatng applications and find that our design ideas are similar to other recent efforts ~\cite{grier2008secure} in isolating untrusted code.
+In summary, we propose to build a secure, usable and portable framework for mobile device virtualization. We believe our security model to be an effective method of isolatng applications and find that our design ideas are similar to other recent efforts ~\cite{grier2008secure} in isolating untrusted code.
