Changes based on wave and other peer reviews

--- a/paper/eval.tex
+++ b/paper/eval.tex
@@ -1,8 +1,9 @@
 \section{Evaluation plan}
 We evaluate our system focusing on our design goals of portability, isolation and usability
 	\begin{itemize*}
-	\item Running existing unmodified x86 binaries mobile device.
-	\item Measure performance impact of x86 emulation on ARM.
+	\item Running existing unmodified binaries on the mobile device.
+	\item Verify correctness of the implementation using standard benchmarks.
+	\item Measure performance impact of emulation on ARM.
 	\item Evaluate the latency of an interactive application which renders using the native X-server.
   \item Profile the memory and power overhead due to virtualization.
 	\end{itemize*}
