--- a/paper/mybib.bib
+++ b/paper/mybib.bib
@@ -129,7 +129,7 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
 }
 
 @misc{trustzone,
- author = {ARM Ltd.},
+ author = {{ARM Ltd.}},
  title = "{ARM - TrustZone}",
  howpublished = {\url{http://www.arm.com/products/processors/technologies/trustzone.php}},
 }
