--- a/paper/results.tex
+++ b/paper/results.tex
@@ -1,6 +1,7 @@
 \section{Anticipated results}
 	\begin{itemize*}
-	\item Working implementation of x86 Hypervisor on ARM
-	\item VM Manager integrated with the mobile device window manager 
+	\item Working implementation of Hypervisor on ARM.
+  \item X11 server running natively on mobile device.
+	\item Implementation of a VM Manager integrated with the mobile device window manager.
+	\item Ability to migrate a binary from desktop to mobile device
 	\end{itemize*}
-
