--- a/paper/timeline.tex
+++ b/paper/timeline.tex
@@ -1,16 +1,17 @@
 \section{Timeline}
 \subsection{Feb 17 - March 17}
 	\begin{itemize*}
-	\item Explore architecture details of ARM and finalize design details for the hypervisor.
-	\item Build a thin x86 hypervisor on ARM using the mobile device toolchain.
-	\item Compile and run x11 on the mobile device.
+	\item Explore architecture details of ARM and finalize the design details for the hypervisor.
+	\item Evaluate the overhead of x86 vs ARM virtualization.
+	\item Run a thin hypervisor on ARM using the mobile device toolchain.
+	\item Compile and run X Window System on the mobile device.
 	\end{itemize*}
 \subsection{March 17 - April 27}
 	\begin{itemize*}
-	\item Integrate x11 with Window Manager of the mobile device.
+	\item Integrate X Window System with Window Manager of the mobile device.
 	\item Implement VM Manager to spawn the virtual machines and x11.
-        \item Implement migration UI on desktop and mobile device.
-        \item Migrate existing x86 applications between desktop and mobile device.
+  \item Implement migration UI on desktop and mobile device.
+  \item Migrate existing applications between desktop and mobile device.
 	\item Investigate performance improvements to make emulation faster.
 	\end{itemize*}
 \subsection{April 27 - May 11}
