Made wording more assertive

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 Modern mobile devices run third party applications to perform complex tasks like web browsing, banking and gaming. Recent studies have found that smart-phones are the target of an increasing number of malware attacks \cite{bose2006mobile, cybercriminals2007banks, iphone2010seriot} and their security is important as personal data such as contacts, credit card numbers and passwords are often stored on the device. While some security models \cite{androidsecurity} provide a stronger process level isolation among applications, operating system bugs such as \cite{sms2009iphone,opencore2009android,kernel2009vulnerability} allow malicious applications to take over the device. Virtualization can be useful for secure isolation of third party code from confidential data and provide greater defense-in-depth against attacks on the system.\\
 
-In recent years, virtual machines have become prevalent in cluster computing environments \cite{gartner2009virtual} as they provide isolation between shared usage of machines in a data center. As a result of hardware improvements, smart phone configurations found today resemble desktop machines from few years ago and many of them run commodity operating systems. There is a growing interest in academia \cite{cox2007pocket} and industry \cite{vmware2009nextfrontier} about the benefits of virtualization on these devices. We believe that virtualization can provide better security guarantees in mobile devices and enable useful applications like environment migration. \\
+In recent years, virtual machines have become prevalent in cluster computing environments \cite{gartner2009virtual} as they provide isolation between shared usage of machines in a data center. As a result of hardware improvements, smart phone configurations found today resemble desktop machines from few years ago and many of them run commodity operating systems. There is a growing interest in academia \cite{cox2007pocket} and industry \cite{vmware2009nextfrontier} about the benefits of virtualization on these devices. Virtualization provides better security guarantees in mobile devices than current solutions offer as well enabling useful applications like environment migration. \\
 
 Migrating a system to a mobile device can take advantage of network or computation facilities that are closer to the user's location and provide the user with a consistent experience irrespective of the network connectivity. Environment migration has been studied earlier, in the context of servers in a cluster \cite{clark2005live} and enables administrators of clusters to perform maintenance tasks without interruption. On the other hand, migration techniques on mobile devices can help maintain consistent snapshots which allow easy transfer of data when users switch mobile phones and to roll-back the system to a previously known state.
 
@@ -29,9 +29,9 @@ Our proposed architecture has two main components: the virtualization framework,
 
 The other component is the integration front-end.  This contains a light X server that has been integrated into the host OS, and also contains the VM manager.  The VM manager will either run inside the X-server as a native application (ARM-based), or as a separate application within the host OS.  The VM manager will be the user interface that controls launching, switching, suspending, resuming, migrating the VM's and ensuring the X-server is running properly. Note that most of this actual logic and functionality will be implemented by the hypervisor in the virtualization framework.\\
 
-The shared X-server allows us to share the rendering of the applications, which we believe is an improvement over running an X-server in each of the VM. We plan to use different X-sessions per VM to reduce sharing between them.
-Additionally the X-server will be running native code, which we hope will allow for it to be less cpu-intensive than it might otherwise. \\
+The shared X-server allows us to share the rendering of the applications, which is an improvement over running an X-server in each of the VM. We plan to use different X-sessions per VM to reduce sharing between them.
+Additionally the X-server will be running native code, which will allow for it to be less cpu-intensive than it might otherwise. \\
 
-Additionally we aim to have the virtualization framework be device independent, which is important because we anticipate this to be the more complex component.  The integration front-end will have to be ported for each new device we support, but we hope to make its implementation relatively simple. Our first implementation will focus on one particular device and OS and support live migration of applications from desktops. \\
+Additionally we aim to have the virtualization framework be device independent, which is important because we anticipate this to be the more complex component.  The integration front-end will have to be ported for each new device we support, but we will strive to make implementation simple. Our first implementation will focus on one particular device and OS as well as the supportfor live migration of applications from desktops. \\
 
-In summary, we propose to leverage existing hypervisors to build a secure, usable and portable framework for mobile device virtualization. Our contributions will be focused on providing the ability for live migration of applications with deep integration to the mobile device. We believe our security model to be an effective method of isolatng applications and find that our design ideas are similar to other recent efforts \cite{grier2008secure} in isolating untrusted code.
+In summary, we propose to leverage existing hypervisors to build a secure, usable and portable framework for mobile device virtualization. Our contributions will be focused on providing the ability for live migration of applications with deep integration to the mobile device. Our security model proposes an effective method of isolatng applications and find that our design ideas are similar to other recent efforts \cite{grier2008secure} in isolating untrusted code.
