--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -7,7 +7,7 @@
 
 \sloppy
 
-\title{More Mobile than Mobile}
+\title{MoVirt: More Mobile than Mobile}
 \author{Will Dietz, Kevin Larson, Shivaram Venkataraman\\
 \{wdietz2, klarson5, venkata4\}@illinois.edu\\
 University of Illinois at Urbana Champaign}
