Fix spell error

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -34,4 +34,4 @@ A shared X-server removes rendering overhead from each VM and reduces the comple
 
 Additionally we aim to have the virtualization framework will be device independent, which is important because we anticipate this to be the more complex component.  The integration front-end will have to be ported for each new device we support, but we will strive to make its implementation simple. Our first implementation will focus on one particular device and OS and support live migration of applications from desktops. \\
 
-In summary, we propose to leverage existing hypervisors to build a secure, usable and portable framework for mobile device virtualization. Our contributions will be focused on providing the ability for live migration of applications with deep integration to the mobile device. Our security model proposes an effective method of isolatng applications and find that our design ideas are similar to other recent efforts \cite{grier2008secure} in isolating untrusted code.
+In summary, we propose to leverage existing hypervisors to build a secure, usable and portable framework for mobile device virtualization. Our contributions will be focused on providing the ability for live migration of applications with deep integration to the mobile device. Our security model proposes an effective method of isolating applications and find that our design ideas are similar to other recent efforts \cite{grier2008secure} in isolating untrusted code.
